Final round of corrections.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.35 2009/08/31 11:48:58 ith Exp $
+% $Id: mainintro.tex,v 1.36 2009/08/31 14:21:38 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.35 2009/08/31 11:48:58 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.36 2009/08/31 14:21:38 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -368,7 +368,7 @@ flatness problem.
 
 
 \subsubsection{Horizon Problem} \label{sec:horizprob}
-As defined in \eq{eq:particlehorizon-intro} the particle horizon, also known
+The particle horizon, also known
 as the comoving horizon, defines the maximum separation between two points that
 have been in causual contact sometime in the past. During the radiation and
 matter eras this comoving horizon increases monotonically and so length-scales
@@ -1086,7 +1086,7 @@ kinetic function $P$ and its derivatives \cite{lidser1,lidser3}:
 The first parameter, $c_s$, is called the ``sound speed'' of the fluctuations
 in the inflaton field. This can be significantly less than unity, 
 in contrast to slow-roll inflation driven by a canonical 
-field such that $P_{,X} =1$.
+field such that $c_s = P_{,X} =1$.
 % 
 Christopherson and Malik \cite{Christopherson:2008ry} showed that in fact $c_s$
 is the phase speed of the fluctuations and not the sound speed
@@ -1121,9 +1121,9 @@ horizon with $kc_s \gg aH$ the mode solution takes a similar asymptotic form to
 \end{equation}
 
 
-Following the same analysis above we find that the amplitudes of the curvature 
+Following the same analysis above we find that the amplitude of the curvature 
 perturbations 
-generated during inflation change in this case and is given by \cite{gm}
+generated during inflation changes in this case and is given by \cite{gm}
 % 
 \begin{equation} 
 \label{eq:Ps-dbiintro}
