--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.32 2009/08/06 15:32:26 ith Exp $
+% $Id: dbi-intro.tex,v 1.33 2009/08/31 14:21:47 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.32 2009/08/06 15:32:26 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.33 2009/08/31 14:21:47 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -27,23 +27,25 @@
 The inflationary scenario provides the 
 theoretical framework for the early history 
 of the universe. It has now been successfully tested by observations, 
-including the five year data from the Wilkinson Microwave Anisotropy 
-Probe (WMAP5) \cite{Komatsu:2008hk}. Despite this success, however, the high energy 
+including the five year data from WMAP
+\cite{Komatsu:2008hk}. Despite this success, however, the high energy 
 physics that resulted in a phase of accelerated expansion is still 
-not well understood. String/M-theory attempts to unify the fundamental interactions 
-including gravity and it is natural and important to 
+not well understood. String and M-theory attempt to unify the fundamental
+interactions 
+including gravity. It is important to 
 develop inflationary models within string theory and to confront them with 
 cosmological observations. 
  
 
-One class of string-theoretic models that has received 
+One class of string-theory models that has received 
 considerable attention is D-brane inflation
 \cite{brane1,brane2,brane3,brane4,brane5,
 brane6,brane7,brane8,brane9,brane10,brane11,brane12,brane13,
 brane14,brane15,brane16,brane17,Brodie:2003qv,Vikman:2006hk, 
 Mukhanov:2005bu,Kallosh:2007wm,brane18,
 brane19,brane20,brane21}. 
-(For recent reviews, see, e.g., \cite{tyereview,cline,McAllister:2007bg,Lorenz:2007ze,
+(For some recent reviews, see
+\cite{tyereview,cline,McAllister:2007bg,Lorenz:2007ze,
 Bean:2007eh,bean}). 
 % Of particular interest 
 % is the Dirac-Born-Infeld (DBI) inflationary scenario \cite{brane6,brane11}.
@@ -118,14 +120,14 @@ fundamental forces in a robust theoretical framework. Since the realization of
 the SM a clear goal of theoretical physics has been the unification of the
 final force, gravity, into this framework. In this section we will introduce
 some of the concepts that will be required later to understand DBI inflation.
-\addtodo{Include more citations}
 Many review articles and text books have been about string theory and its
 application to cosmology, a short list of recent works includes
-\cite{Polchinski1996,cline,Johnson2000}.
+\cite{cline, Johnson2000, Baumann:2009ni,Kallosh:2007wm,
+Linde:2005dd,McAllister:2007bg}.
 
 
 String theory is one of the most successful current attempts to achieve the
-unification of physics. According to this theory, the fundamental
+unification of physics. In this theory, the fundamental
 building blocks of the
 universe are vibrating bundles of energy. These ``strings'' constitute all matter and force
 particles in existence.
@@ -153,7 +155,8 @@ are useful for solving problems in the original setting.
 % which the individual string theories are only facets. 
 We will work in the string theory which has proven
 to be the most
-fruitful for models of cosmological inflation, Type IIB. 
+fruitful for models of cosmological inflation, Type IIB \cite{cline,
+Linde:2005dd}. 
 % 
 % The most striking prediction of string theory is the existence of other
 % dimensions beyond the four space-time dimensions that we
@@ -177,20 +180,18 @@ consistent cosmological narrative.
 In Chapter \ref{ch:introduction} inflation was put forward as the leading
 explanation of the early development of the universe. For string theory to be
 a consistent framework in the inflationary paradigm it must produce a period of
-inflationary expansion. The input of physics beyond
-the SM is required to understand the origin of inflation. Although usually described by SM scalar
+inflationary expansion. Although inflation is usually described by SM scalar
 fields, there is as yet no
 evidence for the existence of such fields in the SM. Higher
 energy theories such as string theory could provide an explanation for the
-existence of inflaton fields. In this way inflation and string theory are
-ideal partners and it is natural to consider them together when investigating
-the early universe.
+existence of inflaton fields.
+%  In this way inflation and string theory are
+% ideal partners and it is natural to consider them together when investigating
+% the early universe.
 
-\addtodo{Clarify paras on constraining string theory with cosmology, genericity
-argument, unexpected signals. Tie to introduction chapter and fnl as a
-discriminator. Add citations.}
 
-Cosmology can be used as a tool to constrain string theory. Much of the evidence of an
+Cosmology can be used as a tool to constrain string theory. Much of the evidence
+of an
 era of string theory physics would be removed by a period of inflation but the
 observational results of inflation itself could provide clues about the nature
 of such an era. 
@@ -199,18 +200,22 @@ One avenue of investigation would be to look for signals that are generic in str
 see if they are observed. While this could not definitively prove string theory to be the 
 cause it would vindicate continued efforts to find such a smoking gun. Conversely any observed
 signal that is predicted to occur rarely in string theory would make the theory more implausible.
-Limiting the parameter space of an acceptable string theory to an ever smaller region would also
-decrease its viability even if it could not be ruled out. 
-
-One particularly good indicator is the non-gaussianity parameter $\fnl$.
+% Limiting the parameter space of an acceptable string theory to an ever smaller
+% region would also
+% decrease its viability even if it could not be ruled out. 
+One observational parameter suited to this is the non-gaussianity
+parameter $\fnl$ as introduced in Section~\ref{sec:fnl-intro}.
 Standard inflation models, including the single field slow roll model described in
-Section~\ref{sec:slowroll-intro}, tend not to produce much non-gaussianity, whereas
+Section~\ref{sec:slowroll-intro}, produce small amounts of $\fnlloc$, whereas
 certain classes of string theory inspired models have large non-gaussian
-signatures. While not exclusively a string theory effect, a detection of or
-failure to detect non-gaussianity would rule in and out large classes of models.
+signatures. 
+% While not exclusively a string theory effect, a detection of or
+% failure to detect non-gaussianity would rule in and out large classes of
+% models.
 
 \subsection{Extra dimensions}
-String theory tells us that the 3 spacial dimensions that we see
+String theory tells us that the one time and three spacial dimensions that we
+see
 around us are not the full extent of the space-time manifold. Instead
 we live in a 10 or
 11 dimensional space-time and physical theories in 3+1 dimensions must
@@ -222,9 +227,9 @@ ones.
 
 The early work of Kaluza and Klein (KK) in formulating higher dimensional 
 theories laid the groundwork for the current treatment of extra dimensions in
-string theory \cite{Kaluza1921, Klein1926}. They found that by
+string theory \cite{Kaluza1921, Klein1926}. By
 compactifying an extra dimension onto a circle of finite radius an infinite
-tower of extra fields would be introduced into the lower dimensional theory. The
+tower of extra fields are introduced into the lower dimensional theory. The
 mass of these fields is inversely proportional to the size of the extra
 dimension. By taking the radius to be extremely small the appearance of these
 unobserved massive fields is avoided. This leaves a
@@ -276,12 +281,12 @@ at different spacetime points can affect the physics at those points.
 \subsection{T-duality}
 \label{sec:tduality-dbiintro}
 % T-Duality
-Suppose we have a string theory compactified on a circle of radius $R$. Instead
+Suppose we have a string theory compactified on a circle of radius $L$. Instead
 of being a continuum, the momentum of a closed string takes discrete values
-$n/R$ for $n \in \mathbb{Z}$. This is a KK tower of massive states. As we
+$j/L$ for $j \in \mathbb{Z}$. This is a KK tower of massive states. As we
 complete a circuit around the compact dimension, the value of the coordinate
 function embedding the string in the background will also increase by $2\pi w
-R$ for $w \in \mathbb{Z}$. This $w$, called the winding number of the string,
+L$ for $w \in \mathbb{Z}$. This $w$, called the winding number of the string,
 can only be non-zero for closed strings, which can be wrapped around the periodic
 dimension.
 
@@ -289,23 +294,24 @@ The total mass of the string contains terms with both the KK tower of states
 and the new tower of winding states:
 \begin{equation}
 \label{eq:closedmass-dbiintro}
- M^2 = \frac{n^2}{R^2} + \frac{w^2 R^2}{\alpha'^2} + \cdots\,.
+ M^2 = \frac{j^2}{L^2} + \frac{w^2 L^2}{\alpha'^2} + \cdots\,.
 \end{equation}
-If $R$ is taken to infinity the $w\ne 0$ states become infinitely massive and
+If $L$ is taken to infinity the $w\ne 0$ states become infinitely massive and
 only the $w=0$ state is left with a continuum of momentum values. Thus the
-uncompactified result is recovered. However if $R\rightarrow0$ the $n\ne 0$
+uncompactified result is recovered. However if $L\rightarrow0$ the $j\ne 0$
 states are now infinitely massive as in the standard KK picture. Unlike that
 scenario, there is now a continuum of winding states $w\ne 0$, again giving an
 uncompactified dimension. This major departure from the standard
 compactification result is a purely stringy effect. 
 
 The formula for the mass spectrum, \eq{eq:closedmass-dbiintro}, is invariant
-when $n$ and $w$ are exchanged given the transformation
+when $j$ and $w$ are exchanged given the transformation
 \begin{equation}
- R \rightarrow R' = \frac{\alpha'}{R}\,.
+ L \rightarrow L' = \frac{\alpha'}{L}\,.
 \end{equation}
-Writing the equations of motion in terms of $R'$, having swapped $n$ and $w$, gives a new theory
-which is compactified on a circle of radius $R'$. This is known as the
+Writing the equations of motion in terms of $L'$, having swapped $j$ and $w$,
+gives a new theory
+which is compactified on a circle of radius $L'$. This is known as the
 T-dual theory and the transformation is called T-duality
 \cite{Sakai1986,Kikkawa1984b}. The two
 theories,
@@ -315,22 +321,23 @@ of string theory for closed strings.
 % 
 \subsection{D-branes}
 \label{sec:dbranes-dbiintro}
-Despite using string theory we will not be dealing with strings themselves.
-Instead we will consider the dynamics of extended objects known as branes and
-in particular we will use Dirichlet- or D-branes. As mentioned above, string
+% Despite using string theory we will not be dealing with strings themselves.
+The dynamics of extended objects known as branes are particularly important for
+building inflationary models.
+As mentioned above, string
 theories are linked by T-duality. Fundamental parameters are translated by the
 duality including the size of the extra-dimensions, the string coupling and the
 coordinate solutions of the strings.
 
 
-In Section \ref{sec:tduality-dbiintro} we introduced T-duality by explaining
+We introduced T-duality by explaining
 its effects on closed strings. But what happens when open strings are
 T-dualised? Open strings, as their name suggests, have two open ends and
 consequently cannot have a conserved winding number like $w$. Again suppose one
-of the $D$ dimensions is compactified. As $R\rightarrow0$ the non-zero momentum
+of the $D$ dimensions is compactified. As $L\rightarrow0$ the non-zero momentum
 states get infinitely massive but in contrast to the closed case there is now
 no continuum of winding states. Thus the theory now lives in one less
-dimension similar to standard KK compactification.
+dimension similar to standard KK compactification \cite{Johnson2000}.
 
 There are still closed strings in this theory however, and these continue to
 move in the full $D$ dimensions. The endpoints of the open strings now observe
@@ -348,7 +355,8 @@ along with all spatial directions is subject to Dirichlet boundary conditions
 % 
 
 D$p$-branes can be considered as dynamical objects in their own right with a
-tension\footnote{$T_p$ here is $\tau_p$ in \cite{Johnson2000}.}
+tension \cite{Johnson2000}\footnote{$T_p$ here is $\tau_p$ in
+\cite{Johnson2000}.}
 % 
 \begin{equation}
 \label{eq:branetensiondefn-dbiintro}
@@ -360,7 +368,7 @@ Their dynamics is governed by the action
 % 
 \begin{equation}
 \label{eq:gendbiaction-dbiintro}
- S = -T_p \int d^{p+1}\xi \sqrt{-\hat{g}}\,,
+ S_\mathrm{DBI} = -T_p \int d^{p+1}\xi \sqrt{-\hat{g}}\,,
 \end{equation}
 where $\hat{g}_{ab}$ is the induced metric on the brane with internal
 coordinates $\xi^a$ for $a=0,\ldots,p$. This is the general form of the DBI
@@ -373,15 +381,13 @@ Section \ref{sec:slowroll-intro}. D-branes are charged (with Ramond-Ramond
 charge) and we can consider a system of a D-brane and an anti-D-brane
 ($\overline{\mathrm{D}}$). As the two branes attract each other the distance
 between them can be used as a decreasing scalar degree of freedom, the
-inflaton . 
+inflaton field. 
 When the branes collide they will annihilate and produce energy to
 reheat the universe \cite{brane1,brane2,brane3,brane7,Brodie:2003qv,brane9}. 
 
-\addtodo{Add more description of standard D-brane models?}
-
 As described in Section \ref{sec:extradims} compacitifying dimensions
 introduces scalar fields known as moduli. These massless fields must be
-accounted for in the dynamics unless some way is found to ``stabilize'' them by
+accounted for in the dynamics unless some way is found to stabilize them by
 fixing their mass to be large enough that they do not interfere.
 Initial efforts to induce inflation using D-branes ignored the issue of moduli
 stabilization. Instead it was
