Changed reference to eq in dbiintro

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.17 2009/08/06 15:35:47 ith Exp $
+% $Id: dbi.tex,v 1.18 2009/08/31 14:36:28 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.17 2009/08/06 15:35:47 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.18 2009/08/31 14:36:28 ith Exp $}
 % \input{paper1}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -548,7 +548,7 @@ where $f_i (\varphi )$ are unspecified functions of the inflaton
 field\footnote{It is assumed 
 implicitly that the functions have a suitable form for 
 generating a successful phase of inflation.}.
-A direct comparison with Eq. (\ref{defP}) 
+A direct comparison with Eq. (\ref{eq:Pdefn-dbiintro}) 
 indicates that the standard DBI action exhibits two important properties. 
 The first is the condition that $f_1 f_2 =2$. This implies that 
 $c_sP_{,X} =1$ and greatly simplifies the form of Eq. (\ref{eq:rtheory}). 
@@ -561,7 +561,7 @@ or both of these conditions.
 
 Eq. (\ref{eq:genaction-dbi}) 
 can be transformed into a similar form to that of 
-Eq. (\ref{defP}) through the field redefinition 
+Eq. (\ref{eq:Pdefn-dbiintro}) through the field redefinition 
 % 
 \begin{equation}
 \label{eq:defvarphi}
