Changed eq ref.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.18 2009/08/31 14:36:28 ith Exp $
+% $Id: dbi.tex,v 1.19 2009/08/31 16:04:56 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.18 2009/08/31 14:36:28 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.19 2009/08/31 16:04:56 ith Exp $}
 % \input{paper1}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -585,7 +585,7 @@ and the scalar perturbation amplitude by
 P_S^2 = \frac{1}{2\pi^2}\frac{H^4}{f_1f_2\dot{\varphi}^2}  \,.
 \end{equation}
 % 
-However, the consistency equation (\ref{eq:consistency-dbiintro}) and 
+However, the consistency equation (\ref{eq:rdefn-dbiintro}) and 
 non-Gaussianity constraint (\ref{eq:fnlcs-dbiintro}) remain unaltered 
 for this more general class 
 of models \cite{lidser2}. It 
