--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.34 2009/08/31 16:04:30 ith Exp $
+% $Id: dbi-intro.tex,v 1.35 2009/08/31 22:20:52 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.34 2009/08/31 16:04:30 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.35 2009/08/31 22:20:52 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -87,7 +87,7 @@ known as the `relativistic' limit.
 
 
 
-In Chapters \ref{ch:dbi-intro}, \ref{ch:dbi} and \ref{ch:multibrane} we will 
+In Part~\ref{part:dbi} of this thesis we will 
 explore the observational consequences of DBI inflation. 
 In general, primordial gravitational wave fluctuations
 and non-Gaussian statistics in the curvature perturbation provide 
@@ -113,21 +113,23 @@ scenarios which permit observational tensor signals.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-Unification of seemingly disparate theories has been a driving force in
-theoretical physics for more than a hundred years. This effort culminated in the
-Standard Model (SM) of particle physics which unifies three of the four
+The desire to unify seemingly disparate theories has been a driving force in
+theoretical physics for more than a hundred years. This effort has produced 
+the Standard Model (SM) of particle physics which unifies three of the four
 fundamental forces in a robust theoretical framework. Since the realization of
 the SM a clear goal of theoretical physics has been the unification of the
-final force, gravity, into this framework. In this section we will introduce
-some of the concepts that will be required later to understand DBI inflation.
-Many review articles and text books have been about string theory and its
-application to cosmology, a short list of recent works includes
+final force, gravity, into this framework. String theory is one of the leading
+contenders for achieving this unification. 
+In this section we will introduce
+some of the string theory concepts that will be required later to understand DBI
+inflation.
+Many review articles and text books have been written about string theory and
+its application to cosmology, a short list of recent works includes
 \cite{cline, Johnson2000, Baumann:2009ni,Kallosh:2007wm,
 Linde:2005dd,McAllister:2007bg}.
 
 
-String theory is one of the most successful current attempts to achieve the
-unification of physics. In this theory, the fundamental
+In string theory the fundamental
 building blocks of the
 universe are vibrating bundles of energy. These ``strings'' constitute all matter and force
 particles in existence.
@@ -153,9 +155,9 @@ dual description in the other. The dual version often exhibits properties that
 are useful for solving problems in the original setting.
 % These dualities have demonstrated the existence of an underlying theory of
 % which the individual string theories are only facets. 
-We will work in the string theory which has proven
+We will work in the subset of string theory which has proven
 to be the most
-fruitful for models of cosmological inflation, Type IIB \cite{cline,
+fruitful for generating models of cosmological inflation, Type IIB \cite{cline,
 Linde:2005dd}. 
 % 
 % The most striking prediction of string theory is the existence of other
@@ -181,8 +183,8 @@ In Chapter \ref{ch:introduction} inflation was put forward as the leading
 explanation of the early development of the universe. For string theory to be
 a consistent framework in the inflationary paradigm it must produce a period of
 inflationary expansion. Although inflation is usually described by SM scalar
-fields, there is as yet no
-evidence for the existence of such fields in the SM. Higher
+fields, there is no
+evidence yet for the existence of such fields in the SM. Higher
 energy theories such as string theory could provide an explanation for the
 existence of inflaton fields.
 %  In this way inflation and string theory are
@@ -198,7 +200,8 @@ of such an era.
 
 One avenue of investigation would be to look for signals that are generic in string theory and
 see if they are observed. While this could not definitively prove string theory to be the 
-cause it would vindicate continued efforts to find such a smoking gun. Conversely any observed
+cause it would vindicate continued efforts to prove the theory is consistent
+with observations. Conversely any observed
 signal that is predicted to occur rarely in string theory would make the theory more implausible.
 % Limiting the parameter space of an acceptable string theory to an ever smaller
 % region would also
@@ -221,7 +224,7 @@ we live in a 10 or
 11 dimensional space-time and physical theories in 3+1 dimensions must
 compensate for the
 other 6 or 7 dimensions that are hidden from us. One of the challenges of string theory is how 
-to hide these extra dimensions in such a way as to recover standard physical
+to hide these extra dimensions in such a way as to maintain standard physical
 results in the usual
 ones. 
 
@@ -246,7 +249,7 @@ by three complex coordinates \cite{Yau1977}.
 Because any Ricci flat metric can be
 rescaled into another Ricci flat metric, there is no unique solution for the
 metric on the CY manifold. Instead a family of solutions exists with many free
-parameters. These remain after the compactification, in
+parameters. These parameters remain after the compactification, in
 analogy to the size of the extra dimension in KK compactification, and can vary
 dependent on position in the four-dimensional space-time. They appear as fields
 in the four-dimensional theory and are known as moduli. 
@@ -285,7 +288,7 @@ Suppose we have a string theory compactified on a circle of radius $L$. Instead
 of being a continuum, the momentum of a closed string takes discrete values
 $j/L$ for $j \in \mathbb{Z}$. This is a KK tower of massive states. As we
 complete a circuit around the compact dimension, the value of the coordinate
-function embedding the string in the background will also increase by $2\pi w
+function embedding the string in the background will increase by $2\pi w
 L$ for $w \in \mathbb{Z}$. This $w$, called the winding number of the string,
 can only be non-zero for closed strings, which can be wrapped around the periodic
 dimension.
@@ -294,13 +297,16 @@ The total mass of the string contains terms with both the KK tower of states
 and the new tower of winding states:
 \begin{equation}
 \label{eq:closedmass-dbiintro}
- M^2 = \frac{j^2}{L^2} + \frac{w^2 L^2}{\alpha'^2} + \cdots\,.
+ M^2 = \frac{j^2}{L^2} + \frac{w^2 L^2}{\alpha'^2} + \cdots\,,
 \end{equation}
+where the string parameter $\alpha'$ is related to the string mass scale by
+$\alpha'=1/m_s^2$.
 If $L$ is taken to infinity the $w\ne 0$ states become infinitely massive and
 only the $w=0$ state is left with a continuum of momentum values. Thus the
 uncompactified result is recovered. However if $L\rightarrow0$ the $j\ne 0$
-states are now infinitely massive as in the standard KK picture. Unlike that
-scenario, there is now a continuum of winding states $w\ne 0$, again giving an
+states are now infinitely massive as in the standard KK picture. Unlike the
+standard case, there is now a continuum of winding states $w\ne 0$,
+again giving an
 uncompactified dimension. This major departure from the standard
 compactification result is a purely stringy effect. 
 
@@ -324,7 +330,7 @@ of string theory for closed strings.
 % Despite using string theory we will not be dealing with strings themselves.
 The dynamics of extended objects known as branes are particularly important for
 building inflationary models.
-As mentioned above, string
+As mentioned in Section~\ref{sec:tduality-dbiintro}, string
 theories are linked by T-duality. Fundamental parameters are translated by the
 duality including the size of the extra-dimensions, the string coupling and the
 coordinate solutions of the strings.
@@ -336,14 +342,15 @@ T-dualised? Open strings, as their name suggests, have two open ends and
 consequently cannot have a conserved winding number like $w$. Again suppose one
 of the $D$ dimensions is compactified. As $L\rightarrow0$ the non-zero momentum
 states get infinitely massive but in contrast to the closed case there is now
-no continuum of winding states. Thus the theory now lives in one less
-dimension similar to standard KK compactification \cite{Johnson2000}.
+no continuum of winding states. Thus the theory now lives in $D-1$ dimensions
+similar to standard KK compactification \cite{Johnson2000}.
 
 There are still closed strings in this theory however, and these continue to
 move in the full $D$ dimensions. The endpoints of the open strings now observe
 Dirichlet boundary conditions, taking fixed values in the compactified
 direction. This follows through if more than one coordinate is made periodic.
-If $D-p-1$ spatial dimensions are compactified then the ends of the open
+If $D-p-1$ spatial dimensions are compactified, for some $p$, then the ends of
+the open
 strings can still move freely in the other $p$ spatial dimensions on a $p+1$
 dimensional hypersurface called a Dirichlet or D$p$-brane. 
 % 
@@ -355,7 +362,7 @@ along with all spatial directions is subject to Dirichlet boundary conditions
 % 
 
 D$p$-branes can be considered as dynamical objects in their own right with a
-tension \cite{Johnson2000}\footnote{$T_p$ here is $\tau_p$ in
+tension given by \cite{Johnson2000}\footnote{$T_p$ here is $\tau_p$ in
 \cite{Johnson2000}.}
 % 
 \begin{equation}
@@ -382,13 +389,13 @@ charge) and we can consider a system of a D-brane and an anti-D-brane
 ($\overline{\mathrm{D}}$). As the two branes attract each other the distance
 between them can be used as a decreasing scalar degree of freedom, the
 inflaton field. 
-When the branes collide they will annihilate and produce energy to
+When the branes collide they will annihilate each other and produce energy to
 reheat the universe \cite{brane1,brane2,brane3,brane7,Brodie:2003qv,brane9}. 
 
 As described in Section \ref{sec:extradims} compacitifying dimensions
 introduces scalar fields known as moduli. These massless fields must be
 accounted for in the dynamics unless some way is found to stabilize them by
-fixing their mass to be large enough that they do not interfere.
+fixing their mass to be large.
 Initial efforts to induce inflation using D-branes ignored the issue of moduli
 stabilization. Instead it was
 assumed that whatever stabilization technique was used would have no discernable
@@ -484,7 +491,7 @@ conical singularity at the tip of the throat with an $S^3$ cap
 a constant value in this region.
 
 
-In this section we have provided an overview of the concepts that will be
+In this section we have looked at the concepts that will be
 required to discuss DBI inflation. The compactified warped throat described
 here will provide the setting for this string theory implementation of
 inflation. In Section \ref{sec:stringcos-dbiintro} we outlined how cosmological
@@ -578,17 +585,22 @@ The condition that the sound speed be real
 imposes an upper bound on the kinetic energy 
 of the inflaton, $\dot{\varphi}^2 < T(\varphi)$, which 
 is independent of the steepness of the potential.
-The motion of the brane is said to be `relativistic' when this bound is 
+The motion of the brane is said to be relativistic when this bound is 
 close to saturation.
  
-
 We now define the epoch that is directly 
-accessible to cosmological observations as `observable inflation'. 
-Depending on the reheating 
-temperature, this occurred some 30 to 60 e-foldings before the end of 
-inflation. We will assume that the slow roll conditions described in 
-Section~\ref{sec:slowroll-intro} apply during observable inflation.
-The definitions of the slow roll parameters described in that section 
+accessible to cosmological observations as observable inflation. 
+We will assume that this phase 
+occurred when the brane was located within a 
+throat region. We denote the values of all parameters 
+evaluated during observable inflation by a subscript star
+$(~_*)$. Observable inflation corresponds to no more than about 4 e-foldings  
+of inflationary expansion, $\Delta n_* \simeq 4$. 
+This occurred somewhere between 30 to 60 e-foldings before the
+end of inflation. 
+
+
+The definitions of the slow roll parameters in Section~\ref{sec:slowroll-intro} 
 change when $c_s$ is not unity and we
 will include a third parameter $s$ which quantifies the rate of change of $c_s$.
 The inflationary dynamics during this phase can  
@@ -608,7 +620,7 @@ s \equiv \frac{\dot{c_s}}{c_sH}
 % 
 where $\gamma \equiv 1/c_s$. 
 We will assume that the `slow-roll' conditions 
-$\{ \epsilon_H, |\eta_H | , |s | \}  \ll 1$ applied during observable inflation. 
+$\{ \epsilon_H, |\eta_H | , |s | \}  \ll 1$ apply during observable inflation. 
 In this regime, the amplitudes and spectral indices of the two-point functions 
 for the scalar and tensor perturbations are given by \cite{gm}
 % 
@@ -643,7 +655,7 @@ from purely Gaussian statistics may be large
 \cite{brane6,brane11,lidser3,chenetal}. 
 DBI inflation produces non-gaussianity maximised in the equilateral
 configuration and the leading contribution is in the form of
-\eq{fnldefn-dbiintro}. When $c_s\PX=1$ the term $\Lambda$ defined in
+\eq{eq:fnldefn-dbiintro}. When $c_s\PX=1$ the term $\Lambda$ defined in
 \eq{eq:deflambda-dbiintro} is identically zero and $\fnleq$ becomes
 \cite{chenetal,lidser2}
 % 
@@ -654,10 +666,11 @@ configuration and the leading contribution is in the form of
 % 
 When $c_s\ll1$ large amounts of non-gaussianity are produced.
 
-For a homogeneous field $2X = \dot{vp}^2$ so from \eq{eq:csdefn-dbiintro} we get
+For a homogeneous field $2X = \dot{\vp}^2$ so from \eq{eq:csdefn-dbiintro} we
+get
 \begin{equation}
 \label{eq:phiT-dbiintro}
- \dot{vp}^2 = T(\vp)(1-c_s^2)\,.
+ \dot{\vp}^2 = T(\vp)(1-c_s^2)\,.
 \end{equation}
 Eqs. \eqref{eq:spectra-dbiintro},
 \eqref{eq:fnlcs-dbiintro} and \eqref{eq:phiT-dbiintro}
@@ -700,14 +713,6 @@ is related to the tensor-scalar amplitude by \cite{lyth,bmpaper}
 % 
 where $n$ denotes the number of e-foldings as defined in
 \eq{eq:nefolddefn-intro}.
-We will refer to the epoch of inflation that can be directly 
-constrained by cosmological observations as 
-observable inflation and will assume that this phase 
-occurred when the brane was located within a 
-throat region. We denote the values of all parameters 
-evaluated during observable inflation by a subscript star
-$(~_*)$. Observable inflation corresponds to no more than about 4 e-foldings  
-of inflationary expansion, $\Delta n_* \simeq 4$. 
 The total variation in the inflaton field between the epoch of observable 
 inflation and the end of inflation is then given by
 % 
