Final corrections before sending to Jim.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.37 2009/08/31 16:05:31 ith Exp $
+% $Id: mainintro.tex,v 1.38 2009/08/31 22:21:11 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.37 2009/08/31 16:05:31 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.38 2009/08/31 22:21:11 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -30,7 +30,7 @@ be our primary source of information about the early universe.
 The inflationary scenario is an attempt to solve problems with the standard Big
 Bang picture and provide an origin for the fluctuations in energy that seeded
 the growth of structure in the universe
-\cite{Starobinsky:1980te,Guth:1981,Albrecht:1982wi,Linde:1981mu,
+\cite{Starobinsky:1980te,Guth:1980zm,Albrecht:1982wi,Linde:1981mu,
 Starobinsky:1982ee}. These fluctuations link the classical scales of
 relativistic gravity with the quantum scales of Planck level physics. There are
 many possible realisations of inflation and there has been an explosion in the
@@ -412,7 +412,7 @@ have been observed and some mechanism is needed to explain their absence.
 
 Inflation is a period of accelerated expansion in the size of the universe
 which takes place before the start of the Big Bang
-\cite{Starobinsky:1980te,Guth:1981,Albrecht:1982wi,Linde:1981mu,
+\cite{Starobinsky:1980te,Guth:1980zm,Albrecht:1982wi,Linde:1981mu,
 Starobinsky:1982ee}. During this
 expansion the comoving Hubble radius $(aH)^{-1}$ decreases and the isotropic
 pressure of the universe is negative \cite{book:liddle, Baumann2009}:
